--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
         <footer class="app__footer">
             <p class="app__footer-text">
-                Projeto fictício e sem fins comerciais. Imagens geradas por IA no Adobe Firefly.Desenvolvido por Alura. 
+                Todos os direitos reservados 2023. 
             </p>
         </footer>
     </main>
